crates/am/tests/snapshots/snapshots__snapshot_reload_after_active_set_changed.snap
---
source: crates/am/tests/snapshots.rs
assertion_line: 295
expression: output
---
functions -e ct
functions -e gs
alias ct "cargo test"
alias ll "ls -lha"
set -gx _AM_ALIASES "ct,ll"
