crates/am/tests/snapshots/snapshots__snapshot_reload_after_inheritance_removed.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
functions -e cm
functions -e ct
functions -e gs
alias ct "cargo test"
set -gx _AM_ALIASES "ct"
