crates/am/tests/snapshots/snapshots__snapshot_reload_after_parent_profile_removed.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
functions -e cm
functions -e cmf
functions -e gs
function cmf
    cm feat: $argv
end
set -gx _AM_ALIASES "cmf"
