crates/am/tests/snapshots/snapshots__snapshot_reload_after_profile_removed.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
functions -e cm
functions -e ct
functions -e gs
alias cm "git commit -sm"
alias gs "git status"
set -gx _AM_ALIASES "cm,gs"
