crates/am/tests/snapshots/snapshots__snapshot_reload_bash_switch_profile.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
unset -f gs
unset -f cm
cm() { git commit -sm "$@"; }
cmf() { cm feat: "$@"; }
gs() { git status "$@"; }
export _AM_ALIASES="cm,cmf,gs"
