crates/am/tests/snapshots/snapshots__snapshot_reload_fish_globals_only_no_profile.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
functions -e old
alias gs "git status"
alias ll "ls -lha"
set -gx _AM_ALIASES "gs,ll"
