crates/am/tests/snapshots/snapshots__snapshot_reload_fish_switch_profile.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
functions -e gs
functions -e cm
alias cm "git commit -sm"
function cmf
    cm feat: $argv
end
alias gs "git status"
set -gx _AM_ALIASES "cm,cmf,gs"
