crates/am/tests/snapshots/snapshots__snapshot_reload_zsh_after_global_add.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
unalias cm 2>/dev/null; unset -f cm 2>/dev/null
unalias cmf 2>/dev/null; unset -f cmf 2>/dev/null
unalias gs 2>/dev/null; unset -f gs 2>/dev/null
alias ll="ls -lha"
alias cm="git commit -sm"
cmf() { cm feat: "$@"; }
alias gs="git status"
export _AM_ALIASES="cm,cmf,gs,ll"
