crates/am/tests/snapshots/snapshots__snapshot_reload_zsh_switch_profile.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
unalias gs 2>/dev/null; unset -f gs 2>/dev/null
unalias cm 2>/dev/null; unset -f cm 2>/dev/null
alias cm="git commit -sm"
cmf() { cm feat: "$@"; }
alias gs="git status"
export _AM_ALIASES="cm,cmf,gs"
